tests/files/lexer_tests/should_fail/047.cmdr
// Illegal character in variable name (ascii 14)
myvar = 14;